fix: fix logo not show in header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import HeaderLink from "./HeaderLink.astro";
     class="mx-auto flex h-full w-full max-w-7xl items-center justify-between px-4"
   >
     <div class="flex-center aspect-square h-full">
-      <img src="brand.png" alt="" class="aspect-square size-9" />
+      <img src="/brand.png" alt="" class="aspect-square size-9" />
     </div>
     <nav class="flex h-full items-center gap-1 px-1 py-2">
       <HeaderLink href="/">Home</HeaderLink>
